--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,7 +2,14 @@
 <p>Find me in app/views/lists/index.html.erb</p>
 <% @lists.each do |list| %>
   <li><%= link_to list.name, list_path(list) %></li>
+  <%= link_to "Delete",
+  list_path(list),
+  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+
 <% end %>
 </ul>
+
+<div class="mt-5">
 <%= link_to "create", new_list_path %>
-<%= link_to "show", lists_path %>
+
+</div>
